jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Matthieu Casanova, Alan Ezust, cy6erGn0m, Bad Sector, jclopes, Dale Anson,
Anshal Shukla, Damien Radtke and Matthew Gilbert for contributing to this release

{{{ Bug fixes

- Made jedit.exe to find JDK, so that jEdit runs only with JDK (without
  JRE) like 4.3.x and before. (SF.net bug #3134149 - Kazutoshi Satoda)

- Got rid of extra Component created as parent of every JToolBar in 
  GuiUtilities.loadToolBar() (#2114751-Alan Ezust)
  
- Fix for tracker 3134215, restore previously opened files setting not being
  considered when restoring split configuration. (#3134215 - Dale Anson)

- After using save-as action on a read-only buffer the new buffer is no longer
  read-only (#3148102 - Matthieu Casanova)

}}}
{{{ API Changes
- New method TextArea.getVisibleLineText(screenLine) and
 TextArea.getVisibleLineSegment() that returns
 the visible part of the given line (Matthieu Casanova)

- API made private:
 FileVFS.modified
 (Matthieu Casanova)
 
- Removed Deprecated apis :
 EditPlugin.createMenuItems(Vector menuItems)
 EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
 HistoryModel.clear()
 JEditTextArea.getSelectionStart()
 JEditTextArea.getSelectionStart(int line)
 JEditTextArea.getSelectionStartLine()
 JEditTextArea.setSelectionStart(int selectionStart)
 JEditTextArea.getSelectionEnd()
 JEditTextArea.getSelectionEnd(int line)
 JEditTextArea.getSelectionEndLine()
 JEditTextArea.setSelectionEnd(int selectionEnd)
 JEditTextArea.select(int start, int end)
 JEditTextArea.select(int start, int end, boolean doElectricScroll)
 JEditTextArea.isSelectionRectangular()
 TextAreaPainter.setAntiAliasEnabled(boolean isEnabled)
 TextAreaPainter.isAntiAliasEnabled()
 FoldHandler.SERVICE
 Buffer.addBufferChangeListener(BufferChangeListener listener, int priority)
 Buffer.putProperty(Object name, Object value)
 Buffer.putBooleanProperty(String name, boolean value)